[package]
name = "chunked_bit_set"
version = "0.1.0"
authors = ["Christopher Esterhuyse <christopher.esterhuyse@gmail.com>"]
edition = "2018"

[dependencies]
smallvec = { version = "1.4.1", optional = true }

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }

[features]
default = []
smallvec_impl = ["smallvec"]